<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="82dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textStylelarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/midrel"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/midrel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PrimaryPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:textColorHint="@color/blue"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phone"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_corner"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingStart="25dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PrimaryPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:hint="@string/password"
                android:textColorHint="@color/blue"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_corner"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/register"
                    style="@style/textStylexhdpi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/textStylexhdpi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/forgot_password"
                    android:id="@+id/forgotpass"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button_orange"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>
        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:SpinKit_Color="@color/orange" />
    </RelativeLayout>
</layout>