<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotActivity"
        android:background="@color/light_grey"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/curveshape"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/curveshape"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/curveshape"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="25dp"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="gone"
                android:background="@drawable/successful" />
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textStylelarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new"
                android:layout_marginTop="@dimen/padding_10"
                android:textColor="@color/blue"
                android:id="@+id/text1"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textStylexhdpi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/different_password"
                android:layout_marginTop="@dimen/padding_10"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/text2"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:id="@+id/mid_rel"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_corner_blue"
                    android:hint="@string/enter_password"
                    android:paddingStart="25dp"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/padding_20"
                    android:drawableRight="@drawable/eye"
                    android:paddingRight="@dimen/padding_10"
                    android:drawablePadding="@dimen/padding_10"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/textStylexhdpi"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordlength"
                    android:layout_marginTop="@dimen/padding_10"
                    android:textColor="@color/black"
                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/confpass"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_corner_blue"
                    android:hint="@string/confirm_password"
                    android:paddingStart="25dp"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/padding_20"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submitbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/padding_10"
                    android:paddingLeft="35dp"
                    android:paddingRight="35dp"
                    android:background="@drawable/rounded_button_blue2"
                    android:text="@string/submit"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            app:SpinKit_Color="@color/orange" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>