<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotActivity"
        android:background="@color/light_grey"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/curveshape"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/curveshape"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/curveshape"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/smiley"
                android:layout_marginTop="@dimen/padding_10"
                />
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textStylexhdpi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password1"
                android:layout_marginTop="@dimen/padding_10"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textStylexhdpi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_worry"
                android:layout_marginTop="@dimen/padding_10"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phone"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="25dp"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/padding_10"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nextbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_10"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:background="@drawable/rounded_button_blue2"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>
        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            app:SpinKit_Color="@color/orange" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>